welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:2: error: type mismatch;
 found   : Unit
 required: Boolean
def isFacingTrail():Boolean = {
                              ^SlugTracking:6: error: return outside method definition
		return false
                ^SlugTracking:10: error: java.awt.Color does not take parameters
	if (Color.green()){
                       ^